--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     font-size: 14px;
     font-weight: 500;
    box-sizing:border-box;
+    -webkit-font-smoothing: antialiased;
 }
 a{
         color: #000;
@@ -52,10 +53,15 @@ ul{
     list-style:none;
 }
 
-.hero{
+.logo{
     display: block;
     height: 20px;
     width: auto;
+}
+.hero{
+    display: none;
+    height: 16px;
+    width:auto;
 }
 .menyu_ga>span {
     display: block;
@@ -185,6 +191,9 @@ h2{
     text-align: center;
     width: 100%;
 }
+.main-botan a:visited {
+    color: #fff;
+}
 .main-botan a:last-of-type {
     background-color: #fff;
     border: 1px solid #e0e0e0;
@@ -220,8 +229,8 @@ a{
     max-width: 1140px;
     padding-left: 50px;
     padding-right: 50px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left:auto;
+    margin-right:auto;
     position: relative;
     align-items: center;
     display: flex;
@@ -242,17 +251,16 @@ a{
     margin-left: 32px;
 }
 .sub-title h2 {
-    font-family: 'Lato',sans-serif;
     font-size: 38px;
     font-weight: 700;
-    line-height: 74px;
+    line-height: 54px;
+    letter-spacing: .1em;
 }
 .sub-title h2, .sub-title p {
     color: #fff;
     text-align: left;
 }
 .sub-title h2>span {
-    font-family: 'Lato',sans-serif;
     font-size: 38px;
 }
 .sub-title h2 span {
@@ -270,6 +278,7 @@ h2{
     font-weight: 700;
     line-height: 26px;
     margin-bottom: 16px;
+    margin-top: 10px;
 }
 .sub-botan {
     color: #fff;
@@ -292,9 +301,17 @@ h2{
 }
 }
 @media screen and (max-width: 1080px){
-  main{
-    padding-top: 60px
+  .main{
+    padding-top: 0px
   }
+}
+@media screen and (min-width: 768px){
+   .botan:hover{
+        opacity:.8;
+    }
+    .botan{
+        transition: opacity .2s;
+    }
 }
 @media screen and (max-width: 1024px){
 .sub {
@@ -317,6 +334,9 @@ h2{
 .botan {
     transition: opacity .2s;
 }
+.logo{
+    display: none;
+}
 .hero {
     display: block;
 }
@@ -327,6 +347,8 @@ h2{
     max-width: none;
     padding-left: 20px;
     padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
   }
 .poem{
     font-size: 25px;
@@ -356,6 +378,14 @@ h2{
 .main-botan a {
     font-size: 14px;
     width: 100% !important;
+}
+}
+@media screen and (min-width: 768px){
+.main-botan a{
+        transition: opacity .2s;
+}
+.main-botan a:hover{
+    opacity: .8;
 }
 }
  @media screen and (max-width: 767px){
@@ -388,6 +418,8 @@ h2{
     max-width: none;
     padding-left: 20px;
     padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .sub-video {
     width: 100% !important;
@@ -398,7 +430,7 @@ h2{
 }
 
 .sub-title h2 span {
-    font-size: 30px;
+    font-size: 38px;
     letter-spacing: 1px;
 }
 .sub-title h2 {
